<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/textview_shape"
        android:textSize="25sp"
        android:paddingLeft="10sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingRight="10sp"
		android:scrollbars="vertical" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/textview_shape" 
        android:textSize="25sp"
        android:paddingLeft="10sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:paddingRight="10sp"/>

    <Button
        android:id="@+id/five"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/two"
        android:layout_alignTop="@+id/four"
        android:text="@string/five" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/six"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/five"
        android:layout_alignBottom="@+id/five"
        android:layout_alignLeft="@+id/three"
        android:text="@string/six"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/eight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/five"
        android:layout_alignTop="@+id/seven"
        android:text="@string/eight" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/nine"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/six"
        android:layout_alignTop="@+id/eight"
        android:text="@string/nine" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/four"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/one"
        android:layout_below="@+id/one"
        android:text="@string/four" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/seven"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/four"
        android:layout_below="@+id/four"
        android:text="@string/seven"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/zero"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seven"
        android:layout_below="@+id/seven"
        android:text="@string/zero"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/minus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/plus"
        android:layout_alignTop="@+id/six"
        android:text="@string/minus" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/mul"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/minus"
        android:layout_alignTop="@+id/nine"
        android:text="@string/mul" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/div"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mul"
        android:layout_alignTop="@+id/zero"
        android:text="@string/div" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/equal"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/div"
        android:layout_toLeftOf="@+id/div"
        android:text="@string/equal"
        android:textSize="30sp"
        android:textStyle="bold" 
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/equal"
        android:layout_alignBottom="@+id/equal"
        android:layout_alignLeft="@+id/nine"
        android:text="@string/back" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/three"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/five"
        android:layout_toRightOf="@+id/two"
        android:text="@string/three"
        android:textSize="30sp"
        android:textStyle="bold" 
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/plus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/minus"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginRight="17dp"
        android:text="@string/plus"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector" 
        android:onClick="onClick"/>

    <Button
        android:id="@+id/one"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="34dp"
        android:text="@string/one"
        android:textSize="30sp"
        android:textStyle="bold" 
        android:background="@drawable/button_selector"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/two"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/five"
        android:layout_toRightOf="@+id/four"
        android:text="@string/two"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/button_selector"
        android:onClick="onClick" />
    
</RelativeLayout>